// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IAMPolicyDocumentValidator invalid condition key 1`] = `
Array [
  Object {
    "message": "key must be one of aws:CurrentTime, aws:EpochTime, aws:MultiFactorAuthAge, aws:MultiFactorAuthPresent, aws:SecureTransport, aws:UserAgent, aws:PrincipalOrgID, aws:PrincipalTag, aws:PrincipalType, aws:Referer, aws:RequestedRegion, aws:RequestTag, aws:SourceAccount, aws:SourceArn, aws:SourceIp, aws:SourceVpc, aws:SourceVpce, aws:TagKeys, aws:TokenIssueTime, aws:userid, aws:username, got cats",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Condition",
      "Bool",
      "cats",
    ],
  },
]
`;

exports[`IAMPolicyDocumentValidator invalid conditional 1`] = `
Array [
  Object {
    "message": "key must be one of StringEquals, StringNotEquals, StringEqualsIgnoreCase, StringNotEqualsIgnoreCase, StringLike, StringNotLike, NumericEquals, NumericNotEquals, NumericLessThan, NumericLessThanEquals, NumericGreaterThan, NumericGreaterThanEquals, DateEquals, DateNotEquals, DateLessThan, DateLessThanEquals, DateGreaterThan, DateGreaterThanEquals, Bool, Null, BinaryEquals, IpAddress, NotIpAddress, ArnEquals, ArnLike, ArnNotEquals, ArnNotLike, got Foo, did you mean Bool?",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Condition",
      "Foo",
    ],
  },
]
`;

exports[`IAMPolicyDocumentValidator invalid effect 1`] = `
Array [
  Object {
    "message": "must be one of Allow, Deny, got \\"foo\\"",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Effect",
    ],
  },
]
`;

exports[`IAMPolicyDocumentValidator invalid types 1`] = `
Array [
  Object {
    "message": "must be a String, got []",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Sid",
    ],
  },
  Object {
    "message": "must be a String, got []",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Effect",
    ],
  },
  Object {
    "message": "must be a String, got {} or must be a List, got {}",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Principal",
    ],
  },
  Object {
    "message": "must be a String, got {} or must be a List, got {}",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Resource",
    ],
  },
  Object {
    "message": "must be an Object, got \\"\\"",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Condition",
    ],
  },
]
`;

exports[`IAMPolicyDocumentValidator missing required properties 1`] = `
Array [
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Effect",
    ],
  },
  Object {
    "message": "is required",
    "path": Array [
      "Root",
      "Resources",
      "Role",
      "Properties",
      "Policies",
      "0",
      "PolicyDocument",
      "Statement",
      "0",
      "Action",
    ],
  },
]
`;
